--- a/pages/enjera-wot.html
+++ b/pages/enjera-wot.html
@@ -24,6 +24,8 @@
         <li>Tomato</li>
     </ul>
 
+    <h1>Steps</h1>
+
     <ol>
         <li>Bake enjera</li>
         <li>Prepare sega wot</li>
