fixed broken image link

--- a/pages/enjera-wot.html
+++ b/pages/enjera-wot.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Enjera wot</h1>
-    <img src="images/enjera.jpg" alt="Enjera with sause and other garnishes">
+    <img src="../images/enjera.jpg" alt="Enjera with sause and other garnishes">
     <h1>Enjera with sega wot</h1>
     <p>The most popular type of food through out Ethiopia. It is mostly eaten during holidays with family and friends. Lorem ipsum dolor sit amet consectetur 
         adipisicing elit. Dicta optio error facere nesciunt nam molestias suscipit maxime repellendus ad nostrum, quasi molestiae. Ratione amet quod cum adipisci 
